// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Current incentive level should render the current Incentive Level correctly when user can maintain Incentive Level 1`] = `
<div
  className="sc-ifAKCX kQggjh current-iep"
>
  <div
    className="sc-bdVaJa iAgRsv"
  >
    <div
      className="sc-bwzfXH mIHzr"
    >
      <strong
        className="label"
      >
        Current incentive level
      </strong>
      <p>
        Standard
      </p>
    </div>
    <div
      className="sc-bwzfXH mIHzr"
    >
      <strong
        className="label"
      >
        Time since review
      </strong>
      <p>
        625
      </p>
    </div>
    <div
      className="sc-bwzfXH mIHzr"
    >
      <strong
        className="label"
      >
        Date of next review
      </strong>
      <p>
        15/08/2018
      </p>
    </div>
    <div
      className="sc-bwzfXH mIHzr"
    >
      <div>
        <button
          className="sc-htpNat iXzDIq"
          data-qa="change-incentive-level"
          disabled={false}
          onClick={[Function]}
        >
          Change incentive level
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Current incentive level should render the current Incentive Level correctly when user can't maintain Incentive Level 1`] = `
<div
  className="sc-ifAKCX kQggjh current-iep"
>
  <div
    className="sc-bdVaJa iAgRsv"
  >
    <div
      className="sc-bwzfXH mIHzr"
    >
      <strong
        className="label"
      >
        Current incentive level
      </strong>
      <p>
        Standard
      </p>
    </div>
    <div
      className="sc-bwzfXH mIHzr"
    >
      <strong
        className="label"
      >
        Time since review
      </strong>
      <p>
        625
      </p>
    </div>
    <div
      className="sc-bwzfXH mIHzr"
    >
      <strong
        className="label"
      >
        Date of next review
      </strong>
      <p>
        15/08/2018
      </p>
    </div>
  </div>
</div>
`;
